# pendule_pi

./: .gitignore  .pendule_pi_config.yaml  CMakeLists.txt  Installation_8md.html  LICENSE  README.md  Troubleshooting_8md.html  Tutorials.html  Tutorials.js  annotated.html  annotated_dup.js  build-the-pendulum_8md.html  build_code.cmake  build_pendulum.html  classCachedButton-members.html  classCachedButton.html  classCachedButton.js  classes.html  classpendule__pi_1_1Encoder-members.html  classpendule__pi_1_1Encoder.html  classpendule__pi_1_1Encoder.js  classpendule__pi_1_1Joystick-members.html  classpendule__pi_1_1Joystick.html  classpendule__pi_1_1Joystick.js  classpendule__pi_1_1Motor-members.html  classpendule__pi_1_1Motor.html  classpendule__pi_1_1Motor.js  classpendule__pi_1_1Pendule-members.html  classpendule__pi_1_1Pendule.html  classpendule__pi_1_1Pendule.js  classpendule__pi_1_1PenduleCpp-members.html  classpendule__pi_1_1PenduleCpp.html  classpendule__pi_1_1PenduleCpp.js  classpendule__pi_1_1PendulePy-members.html  classpendule__pi_1_1PendulePy.html  classpendule__pi_1_1PendulePy.js  classpendule__pi_1_1Pendule_1_1CalibrationFailed-members.html  classpendule__pi_1_1Pendule_1_1CalibrationFailed.html  classpendule__pi_1_1Pendule_1_1CalibrationFailed.js  classpendule__pi_1_1Pendule_1_1CalibrationFailed__inherit__graph.map  (+257 more)
.github/workflows/: cmake-build-code.yaml  cmake-build-doc.yaml
cmake/: colors.cmake  pendule_piConfig.cmake.in  uninstall_pendule_pi.cmake.in
doc/: CMakeLists.txt  doxyfile.in
doc/extra/: Installation.md  Troubleshooting.md  build-the-pendulum.md  cartPole.stp  installation.md  main_page.md  namespaces.dox  some_page.md  troubleshooting.md
doc/extra/tutorials/: cppclient.md  lowlevel.md  multi_machine.md  pyclient.md  tutorials.md
doc/imgs/tikz/: pendulum.tex
examples/: CMakeLists.txt
examples/lqr/: lqr.cpp  lqr.py
examples/multi_machine/: multi_machine.cpp  multi_machine.py
examples/simple_connection/: simple_connection.cpp  simple_connection.py
examples/swingup-lqr/: lqr.py
include/pendule_pi/: __namespace_doc__.hpp  config.hpp  debug.hpp  encoder.hpp  joystick.hpp  motor.hpp  pendule.hpp  pendule_cpp.hpp  pendule_cpp_client.hpp  pendule_cpp_server.hpp  pigpio.hpp  switch.hpp  version.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  (+64 more)
src/: encoder.cpp  joystick_control_main.cpp  motor.cpp  pendule.cpp  pigpio.cpp  switch.cpp  version.cpp
src/deep_rl_python/: README.md  requirements.txt
src/deep_rl_python/deepRl/: generate_data.py  plots.py
src/deep_rl_python/deepRl/.ipynb_checkpoints/: record_video-checkpoint.ipynb  video_example-checkpoint.ipynb
src/deep_rl_python/deepRl/action-noise/: actionStd%_0.1_monitor.csv  actionStd%_0_monitor.csv  actionStd%_10_monitor.csv  actionStd%_1_monitor.csv  force_std%_0.1_.npz  force_std%_0_.npz  force_std%_10_.npz  force_std%_1_.npz
src/deep_rl_python/deepRl/data/: boxplot.pickle  inference_tensions_sim.pickle
src/deep_rl_python/deepRl/dynamic-friction/: dynamic_friction_sim_0.007035332644615993_.npz  dynamic_friction_sim_0.007035332644615993_monitor.csv  dynamic_friction_sim_0.07035332644615992_monitor.csv  dynamic_friction_sim_0.0_.npz  dynamic_friction_sim_0.0_monitor.csv  dynamic_friction_sim_0.7035332644615993_.npz  dynamic_friction_sim_0.7035332644615993_monitor.csv
src/deep_rl_python/deepRl/encoder-noise/: enc_noise_sim_0.00017453292519943296_rad_.npz  enc_noise_sim_0.00017453292519943296_rad_monitor.csv  enc_noise_sim_0.0008726646259971648_rad_.npz  enc_noise_sim_0.0008726646259971648_rad_monitor.csv  enc_noise_sim_0.0017453292519943296_rad_.npz  enc_noise_sim_0.0017453292519943296_rad_monitor.csv  enc_noise_sim_0.002617993877991494_rad_.npz  enc_noise_sim_0.002617993877991494_rad_monitor.csv  enc_noise_sim_0.008726646259971648_rad_.npz  enc_noise_sim_0.008726646259971648_rad_monitor.csv  enc_noise_sim_0.017453292519943295_rad_.npz  enc_noise_sim_0.017453292519943295_rad_monitor.csv  enc_noise_sim_0.08726646259971647_rad_.npz  enc_noise_sim_0.08726646259971647_rad_monitor.csv  enc_noise_sim_0.0_rad_monitor.csv  enc_noise_sim_0.17453292519943295_rad_.npz  enc_noise_sim_0.17453292519943295_rad_monitor.csv
src/deep_rl_python/deepRl/experimental-vs-random/: _experimental_.npz  _experimental_monitor.csv  _random_.npz  _random_monitor.csv
src/deep_rl_python/deepRl/other/: _random_.npz  _random_monitor.csv
src/deep_rl_python/deepRl/plots/: tmp-pdfcrop-114283.tex
src/deep_rl_python/deepRl/seeds/: basic_0.npz  basic_0monitor.csv  basic_1monitor.csv  basic_2monitor.csv  basic_4monitor.csv  basic_5.npz  basic_6.npz  basic_7.npz  basic_7monitor.csv
src/deep_rl_python/deepRl/src/: generate_video_with_caption.py  generate_video_x_theta_exp.py  theta_x_experiment.py
src/deep_rl_python/learning_lli/: dqn_rpi_lli.py  sac_rpi_lli.py  tcp_envV2.py
src/deep_rl_python/misc/: cartpole.yml  env_custom.py  env_wrappers.py  parameters.yml
src/deep_rl_python/motor_identification/: EJPH.py
src/deep_rl_python/q_learning/: plot_paper_qlearning.ipynb  plot_qlearning_sarsa_results.ipynb
src/pendule_pi/: config.cpp  encoder.cpp  joystick.cpp  motor.cpp  pendule.cpp  pendule_cpp.cpp  pendule_cpp_client.cpp  pendule_cpp_server.cpp  pigpio.cpp  switch.cpp
src/python/: pendule_pi.py  print_state.py
test/: CMakeLists.txt  test_callback_exception.cpp  test_encoder.cpp  test_encoder_callbacks.cpp  test_encoder_homing.cpp  test_encoders_read.cpp  test_joystick.cpp  test_motor.cpp  test_pendule.cpp  test_pendule_calibration.cpp  test_pendule_joystick.cpp  test_pigpio_read.cpp  test_reset_pins.cpp  test_switch.cpp  test_switching_motor.cpp
(+265 files in other folders)
